--- a/style.css
+++ b/style.css
@@ -150,18 +150,30 @@ main {
   }
 }
 
-
-
-
-.texto-info h1 {
+/* Contenedor general */
+.contenido-info {
   text-align: center;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+/* Texto */
+.texto-info h1 {
   font-size: 2em;
   margin-bottom: 10px;
 }
 
 .texto-info p {
-  padding-left: 40px;
   font-size: 1.2em;
   line-height: 1.6;
+}
+
+/* Imagen */
+.imagen-derecha img {
+  width: 100%;
+  max-width: 300px;
+  margin-top: 20px;
+  height: auto;
 }
 
